Fix letter-spacing in blockquote

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -116,7 +116,6 @@ blockquote {
   border-left: 4px solid $grey-color-light;
   padding-left: $spacing-unit / 2;
   font-size: 18px;
-  letter-spacing: 0.5px;
   font-style: italic;
 
   > :last-child {
